# serializer version: 1
# name: test_number_entities[sensor_payload0-expected0][binary_sensor.presence_sensor-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.presence_sensor',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.MOTION: 'motion'>,
    'original_icon': None,
    'original_name': 'Presence sensor',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:00:00:00-00-presence',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_entities[sensor_payload0-expected0][binary_sensor.presence_sensor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'dark': False,
      'device_class': 'motion',
      'friendly_name': 'Presence sensor',
      'on': True,
      'temperature': 0.1,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.presence_sensor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_number_entities[sensor_payload0-expected0][number.presence_sensor_delay-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65535,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.presence_sensor_delay',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Presence sensor Delay',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:00:00:00-00-delay',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_entities[sensor_payload0-expected0][number.presence_sensor_delay-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Presence sensor Delay',
      'max': 65535,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.presence_sensor_delay',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_number_entities[sensor_payload1-expected1][binary_sensor.presence_sensor-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.presence_sensor',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.MOTION: 'motion'>,
    'original_icon': None,
    'original_name': 'Presence sensor',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:00:00:00-00-presence',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_entities[sensor_payload1-expected1][binary_sensor.presence_sensor-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'dark': False,
      'device_class': 'motion',
      'friendly_name': 'Presence sensor',
      'on': True,
      'temperature': 0.1,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.presence_sensor',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_number_entities[sensor_payload1-expected1][number.presence_sensor_duration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65535,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.presence_sensor_duration',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Presence sensor Duration',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:00:00:00-00-duration',
    'unit_of_measurement': None,
  })
# ---
# name: test_number_entities[sensor_payload1-expected1][number.presence_sensor_duration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Presence sensor Duration',
      'max': 65535,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.presence_sensor_duration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
